# FirstFfmpeg

app/: build.gradle
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/aiot/device/firstffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Demux.cpp  Demux.h  native-lib.cpp
app/src/main/java/com/aiot/device/firstffmpeg/: FFmpegUtil.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/aiot/device/firstffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
